# HumanBrain

./: .gitignore  CABLE_EQUATION_GPU.md  CONTEXT_CONTINUATION.md  Cargo.toml  Cargo.toml.bak  Cargo.toml.new  FASE4_RESUMEN_FINAL.txt  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  README.md  SIGNALING_CODE_STRUCTURE.txt  TODO_NEXT_SESSION.md
crates/amygdala/: Cargo.toml
crates/amygdala/src/: lib.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: attractor_analysis.rs  lib.rs
crates/basal-ganglia/: Cargo.toml
crates/basal-ganglia/src/: lib.rs
crates/brainstem/: Cargo.toml
crates/brainstem/src/: lib.rs
crates/cerebellum/: Cargo.toml
crates/cerebellum/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cognition/: Cargo.toml
crates/cognition/src/: circadian.rs  lib.rs  neuromodulation.rs  pharmacology.rs
crates/connectivity/: Cargo.toml
crates/consciousness/: Cargo.toml
crates/cortex/: Cargo.toml
crates/cortex/src/: column.rs  layers.rs  lib.rs  oscillations.rs
crates/glia/: Cargo.toml
crates/glia/src/: lib.rs  (+3 more)
crates/gpu/: Cargo.toml  README.md
crates/gpu/src/: cable_simulator.rs  compute.rs  feedback_loop.rs  lib.rs
crates/gpu/src/shaders/: cable_equation.wgsl  channels_advanced.wgsl  hodgkin_huxley.wgsl
crates/hippocampus/: Cargo.toml
crates/hypothalamus/: Cargo.toml
crates/metabolism/: Cargo.toml
crates/neurons/: Cargo.toml
crates/neurons/examples/: load_swc_morphology.rs  signaling_demo.rs
crates/neurons/src/: channels.rs  channels_advanced.rs  compartmental.rs  compartmental.rs.tmp  lib.rs  morphology.rs  signaling.rs  swc_parser.rs
crates/neurons/test_data/: layer23_pyramidal.swc  layer5_pyramidal.swc  parvalbumin_interneuron.swc
crates/neurons/tests/: swc_integration_test.rs
crates/pharmacology/: Cargo.toml
crates/pharmacology/examples/: validate_all_drugs.rs  validate_pet_calibrated.rs  validate_pet_literature.rs
crates/pharmacology/src/: active_transport.rs  adverse_events.rs  clinical_literature.rs  compartments.rs  enzyme_kinetics.rs  ion_dynamics.rs  lib.rs  pharmacogenomics.rs  pharmacokinetics.rs  reactive_metabolites.rs  receptor_mechanisms.rs  receptor_trafficking.rs  stochastic_resonance.rs
crates/synapses/: Cargo.toml
crates/thalamus/: Cargo.toml
crates/visualization/: Cargo.toml
crates/visualization/src/: lib.rs
crates/visualization/src/shaders/: neural_viz.wgsl
crates/whole-brain/: Cargo.toml
crates/whole-brain/src/: lib.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  BIOLOGICAL_ACCURACY.md  ECOSYSTEM_ANALYSIS.md  SCIENTIFIC_PAPER.md  Technical_Paper.md
docs/development/: Implementation_Complete.md  Phase_4_Completed.md  Signaling_Documentation.md
docs/guides/: Neural_Visualizer.md
examples/: alprazolam_simulation.rs  cortical_network.rs  simple_neuron.rs
paper/latex/: humanbrain_paper.tex
(+12 files in other folders)
