[package]
name = "neurons"
version.workspace = true
edition.workspace = true

[dependencies]
ndarray = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
approx = "0.5"
tempfile = "3.8"
