[package]
name = "pharmacology"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Molina Burgos <yatrogenesis@example.com>"]
description = "Mechanistic pharmacology for neural simulation - receptor binding, ion dynamics, drug kinetics"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
rand_distr = "0.4"

# For numerical operations
nalgebra = "0.32"

[dev-dependencies]
approx = "0.5"
